<!--
  ~ Copyright (C) 2014 Andrew Comminos
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:mumla="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_mute_button" android:title="@string/mute" mumla:showAsAction="ifRoom" android:icon="@drawable/ic_action_microphone"></item>
    <item android:id="@+id/menu_deafen_button" android:title="@string/deafen" mumla:showAsAction="ifRoom" android:icon="@drawable/ic_action_audio"></item>
    <item android:id="@+id/menu_search" android:title="@string/search" mumla:actionViewClass="androidx.appcompat.widget.SearchView" mumla:showAsAction="ifRoom|collapseActionView" android:icon="@drawable/ic_action_search"></item>
    <!-- The audio chooser: filled with the devices the session offers when the menu is prepared
         and again when it is opened (ChannelListFragment.fillAudioDevices), with the echo
         canceller's switch for the active device below them. -->
    <item android:id="@+id/menu_audio_device" android:title="@string/audio_device" android:icon="@drawable/ic_action_audio_device" mumla:showAsAction="ifRoom">
        <menu>
            <group android:id="@+id/menu_audio_device_group" android:checkableBehavior="single"/>
            <item android:id="@+id/menu_audio_echo" android:title="@string/echo_cancellation" android:checkable="true" android:orderInCategory="1000"/>
        </menu>
    </item>
    <item android:id="@+id/menu_noise" android:title="@string/noiseSuppression" mumla:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/menu_noise_none" android:title="@string/noiseSuppressionNone"/>
                <item android:id="@+id/menu_noise_speex" android:title="Speex"/>
                <item android:id="@+id/menu_noise_rnnoise" android:title="RNNoise"/>
            </group>
        </menu>
    </item>
</menu>
